# MathVision-Assistant

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt  sitecustomize.py
configs/: default.yaml
data/: README.md
data/demo/: knowledge_base.jsonl  qa.jsonl  qa_test.jsonl  qa_train.jsonl  qa_val.jsonl
docs/: evaluation_notes.md  lora_degradation_analysis.md  resume_snippets.md  rtx5090_qwen_lora_report.md
mathvision/: __init__.py
reports/: README.md
reports/mock_test/: eval_results.csv  eval_summary.md
reports/smolvlm/: eval_results.csv  eval_summary.md
reports/smolvlm_lora_all/: eval_results.csv  eval_summary.md
scripts/: analyze_qwen_lora_bad_cases.py  ask.py  build_index.py  check_gpu_env.py  eval_qwen_vl_lora.py  inspect_lora_data.py  make_demo_data.py  prepare_lora_data.py  run_eval.py  run_qwen_lora_gpu.sh  run_smoke_test.py  train_lora_qwen_vl_gpu.py  train_lora_smolvlm_gpu.py
src/mathvision/: __init__.py  config.py  device.py  io_utils.py  prompts.py
src/mathvision/app/: gradio_app.py
src/mathvision/data/: synthetic.py
src/mathvision/evaluation/: evaluator.py  metrics.py
src/mathvision/rag/: pipeline.py
src/mathvision/retrieval/: __init__.py  multimodal_index.py  text_index.py
src/mathvision/vlm/: __init__.py  base.py  mock_backend.py  qwen_vl_backend.py  smolvlm_backend.py
tests/: test_metrics.py  test_pipeline.py  test_retrieval.py
