[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathvision-assistant"
version = "0.1.0"
description = "A runnable multimodal math visual question answering project with RAG, evaluation, Gradio demo, and optional LoRA training."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "MathVision-Assistant Contributors" }
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
